# Boundary-mapper

./: .gitignore  README.md  pyproject.toml
boundary_mapper/: __init__.py  cli.py  config.py  db.py  graph_build.py  languages.py  models.py  pattern_extract.py  repo_scan.py  rules_engine.py
boundary_mapper/profiles/: base.py  custom.py
boundary_mapper/reporting/: __init__.py  report_dot.py  report_json.py  report_md.py
boundary_mapper/runtime/: __init__.py  trace_templates.py
boundary_mapper/tests/unit/: test_boundary_wiring.py  test_go_sockopt_detection.py  test_lint_false_positives.py  test_sockopt_discovery.py
